--- a/app/src/main/res/layout/activity_solution.xml
+++ b/app/src/main/res/layout/activity_solution.xml
@@ -46,6 +46,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
         android:textSize="30sp"
+        android:fontFamily="@font/nanumsquarebold"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/scoreViewDivider"
         app:layout_constraintEnd_toEndOf="@+id/scoreViewBackground"
@@ -58,6 +59,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
         android:textSize="30sp"
+        android:fontFamily="@font/nanumsquarebold"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/scoreViewBackground"
         app:layout_constraintStart_toStartOf="@id/scoreViewBackground"
