--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"
+        android:fontFamily="@font/nanumsquarebold"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -72,6 +73,7 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/button_rounded"
         android:elevation="2dp"
+        android:fontFamily="@font/nanumsquarebold"
         android:onClick="onButtonPrevious"
         android:text="@string/previous"
         android:textAllCaps="false"
@@ -86,6 +88,7 @@
         android:layout_marginEnd="30dp"
         android:background="@drawable/button_rounded"
         android:elevation="2dp"
+        android:fontFamily="@font/nanumsquarebold"
         android:onClick="onButtonNext"
         android:text="@string/next"
         android:textAllCaps="false"
@@ -99,12 +102,13 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/button_rounded"
         android:elevation="2dp"
+        android:fontFamily="@font/nanumsquarebold"
+        android:gravity="center"
         android:text="@string/submit"
         android:textAllCaps="false"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/buttonNext"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonNext" />
 
     <!-- Score view background -->
     <ImageView
@@ -123,13 +127,14 @@
         android:id="@+id/textTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/nanumsquarebold"
         android:gravity="center"
         android:textColor="@color/colorPrimary"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@+id/scoreViewBackground"
         app:layout_constraintBottom_toBottomOf="@+id/scoreViewBackground"
         app:layout_constraintEnd_toEndOf="@+id/scoreViewBackground"
-        app:layout_constraintStart_toStartOf="@id/scoreViewBackground"/>
+        app:layout_constraintStart_toStartOf="@id/scoreViewBackground"
+        app:layout_constraintTop_toTopOf="@+id/scoreViewBackground" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
