--- a/app/src/main/res/layout/solution.xml
+++ b/app/src/main/res/layout/solution.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="130dp"
         android:layout_marginBottom="10dp"
+        android:fontFamily="@font/nanumsquarebold"
         android:textStyle="bold" />
 
     <!-- Celebrity image view -->
@@ -24,8 +25,8 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:contentDescription="@null"
         android:background="@drawable/image_shape_orange"
+        android:contentDescription="@null"
         android:elevation="3dp"
         tools:ignore="UnusedAttribute" />
 
@@ -34,16 +35,16 @@
         android:id="@+id/celebrityOption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="130dp">
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="15dp"
+        android:orientation="vertical">
 
         <RadioButton
             android:id="@+id/radioButtonOne"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <RadioButton
             android:id="@+id/radioButtonTwo"
@@ -66,13 +67,15 @@
         android:id="@+id/correctAnswer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="10dp"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="130dp"/>
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/nanumsquarebold"
+        android:textStyle="bold" />
 
-    <View style="@style/HorizontalDivider"
-        android:id="@+id/horizontalDivider"/>
+    <View
+        android:id="@+id/horizontalDivider"
+        style="@style/HorizontalDivider" />
 
 </LinearLayout>
