--- a/app/src/main/res/layout/activity_wordquiz.xml
+++ b/app/src/main/res/layout/activity_wordquiz.xml
@@ -210,7 +210,7 @@
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:background="@drawable/button_rounded"
+        android:background="@drawable/button_orange_rounded"
         android:elevation="2dp"
         android:fontFamily="@font/nanumsquarebold"
         android:onClick="onButtonPrevious"
@@ -225,7 +225,7 @@
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:background="@drawable/button_rounded"
+        android:background="@drawable/button_orange_rounded"
         android:elevation="2dp"
         android:fontFamily="@font/nanumsquarebold"
         android:onClick="onButtonNext"
@@ -240,7 +240,7 @@
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:background="@drawable/button_rounded"
+        android:background="@drawable/button_orange_rounded"
         android:elevation="2dp"
         android:fontFamily="@font/nanumsquarebold"
         android:gravity="center"
@@ -260,7 +260,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonSubmit"
-        app:srcCompat="@drawable/button_rounded" />
+        app:srcCompat="@drawable/button_orange_rounded" />
 
     <!-- Timer -->
     <TextView
