--- a/app/src/main/res/layout/activity_wordquiz.xml
+++ b/app/src/main/res/layout/activity_wordquiz.xml
@@ -54,75 +54,97 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+             >
+
             <Button
                 android:id="@+id/btn1"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn2"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="B"
+                android:layout_margin="2dp"
+                android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn3"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn4"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="B"
+                android:layout_margin="2dp"
+                android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn5"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn6"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="B"
+                android:layout_margin="2dp"
+                android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn7"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn8"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="B"
+                android:layout_margin="2dp"
+                android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn9"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn10"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="B"
+                android:layout_margin="2dp"
+                android:text="A"
                 android:layout_weight="1">
             </Button>
         </TableRow>
@@ -133,72 +155,92 @@
 
             <Button
                 android:id="@+id/btn11"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn12"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="B"
+                android:layout_margin="2dp"
+                android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn13"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn14"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="B"
+                android:layout_margin="2dp"
+                android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn15"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn16"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="B"
+                android:layout_margin="2dp"
+                android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn17"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn18"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="B"
+                android:layout_margin="2dp"
+                android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn19"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:text="A"
                 android:layout_weight="1">
             </Button>
             <Button
                 android:id="@+id/btn20"
+                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="B"
+                android:layout_margin="2dp"
+                android:text="A"
                 android:layout_weight="1">
             </Button>
         </TableRow>
