--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorPrimaryDark">#AFAFAF</color>
     <color name="colorAccent">#ff8000</color>
     <color name="colorAccentDisabled">#DE8F40</color>
+    <color name ="colorButtonDisabled">#E6AD73</color>
     <color name="colorSecondary">#F5F5F5</color>
     <color name="colorSecondaryDark">#CACACA</color>
     <color name="colorBackground">#EEEEEE</color>
