--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -13,7 +13,7 @@
         android:layout_height="200dp"
         android:fontFamily="@font/nanumsquarebold"
         android:gravity="center"
-        android:text="Sign-up"
+        android:text="회원가입"
         android:textColor="@android:color/white"
         android:textColorHint="#000000"
         android:textSize="30sp" />
