--- a/app/src/main/res/layout/wordsolution.xml
+++ b/app/src/main/res/layout/wordsolution.xml
@@ -44,6 +44,17 @@
         android:fontFamily="@font/nanumsquarebold"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/userAnswer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/nanumsquarebold"
+        android:textStyle="bold" />
+
     <View
         android:id="@+id/horizontalDivider"
         style="@style/HorizontalDivider" />
