--- a/app/src/main/res/layout/activity_wordsolution.xml
+++ b/app/src/main/res/layout/activity_wordsolution.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".SolutionActivity">
+    tools:context=".MultipleChoiceSolutionActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
