--- a/app/src/main/res/drawable/image_shape.xml
+++ b/app/src/main/res/drawable/image_shape.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/colorAccent"/>
+        android:color="@android:color/transparent"/>
     <corners
         android:radius="0dp"> </corners>
 </shape>
