--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -26,7 +26,7 @@
         android:layout_height="150dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/image_shape_orange"
+        android:background="@drawable/image_shape"
         android:contentDescription="@null"
         android:elevation="2dp"
         app:layout_constraintStart_toStartOf="parent"
