--- a/app/src/main/res/layout/activity_wordquiz.xml
+++ b/app/src/main/res/layout/activity_wordquiz.xml
@@ -59,7 +59,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/image_shape_orange"
+        android:background="@drawable/image_shape"
         android:contentDescription="@null"
         android:elevation="2dp"
         app:layout_constraintEnd_toEndOf="parent"
