--- a/app/src/main/res/layout/item_incorrectnote.xml
+++ b/app/src/main/res/layout/item_incorrectnote.xml
@@ -22,7 +22,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
-            android:background="@drawable/image_shape_orange"
+            android:background="@drawable/image_shape"
             android:contentDescription="@null"
             android:elevation="2dp"
             app:layout_constraintStart_toStartOf="parent"
